--- a/app/css/style.css
+++ b/app/css/style.css
@@ -22,10 +22,17 @@ h1 {
   color: red;
   text-align: center; }
 
+.paint {
+  position: absolute; }
+
 .paint_setting {
+  position: absolute;
+  left: 0;
+  top: -30px;
   display: flex;
   justify-content: space-around;
-  height: 30px; }
+  height: 30px;
+  width: 100%; }
 
 .color_panel {
   display: none;
@@ -109,3 +116,34 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center; }
+
+.paint_tools {
+  position: absolute;
+  background-color: darkred;
+  top: 30px;
+  left: -50px;
+  width: 50px;
+  height: 70%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around; }
+
+.paint_tools-item {
+  height: 100%;
+  cursor: pointer; }
+
+.paint_tools-item:hover {
+  background-color: red; }
+
+#color_input {
+  height: 50px;
+  width: 50px; }
+
+.cursor {
+  position: absolute;
+  display: none;
+  top: 0;
+  left: 0;
+  z-index: 0;
+  border: 1px solid black;
+  pointer-events: none; }
