--- a/app/css/style.css
+++ b/app/css/style.css
@@ -11,28 +11,14 @@ img {
   max-width: 100%;
   display: block; }
 
-.header {
-  background-color: gray;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center; }
-
-h1 {
-  color: red;
-  text-align: center; }
+* {
+  box-sizing: border-box; }
 
 .paint {
-  position: absolute; }
-
-.paint_setting {
   position: absolute;
-  left: 0;
-  top: -30px;
-  display: flex;
-  justify-content: space-around;
-  height: 30px;
-  width: 100%; }
+  border: 1px solid black;
+  overflow: auto;
+  background-color: gray; }
 
 .color_panel {
   display: none;
@@ -45,99 +31,136 @@ h1 {
   padding: 20px;
   cursor: default; }
 
-.paint_item {
-  position: relative; }
-  .paint_item:hover {
-    background-color: darkred;
-    color: black; }
-    .paint_item:hover .color_panel {
-      display: flex; }
-
-.color {
-  width: 20px;
-  height: 20px;
-  margin-bottom: 5px;
-  cursor: pointer; }
-  .color:last-child {
-    margin: 0; }
-
-.r1 {
-  background-color: #790000; }
-
-.r2 {
-  background-color: #b30000; }
-
-.r3 {
-  background-color: #d40000; }
-
-.r4 {
-  background-color: red; }
-
-.y1 {
-  background-color: #777700; }
-
-.y2 {
-  background-color: #9b9b00; }
-
-.y3 {
-  background-color: #dfdf00; }
-
-.y4 {
-  background-color: yellow; }
-
-.g1 {
-  background-color: #1e531e; }
-
-.g2 {
-  background-color: #2e6b2e; }
-
-.g3 {
-  background-color: #569e56; }
-
-.g4 {
-  background-color: lightgreen; }
-
-.b1 {
-  background-color: #000079; }
-
-.b2 {
-  background-color: #00009c; }
-
-.b3 {
-  background-color: #0000c0; }
-
-.b4 {
-  background-color: blue; }
-
-.paint_item {
-  cursor: pointer;
-  background-color: orange;
-  width: 100%;
+.header__panel {
   display: flex;
-  justify-content: center;
-  align-items: center; }
+  justify-content: space-between;
+  background-color: orange;
+  padding-left: 80px;
+  padding-right: 200px; }
 
-.paint_tools {
-  position: absolute;
+.header__panel-item {
+  border-left: 1px solid black;
+  border-right: 1px solid black;
+  max-width: 300px;
+  width: 100%;
+  height: 40px;
+  background-color: orange;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer; }
+  .header__panel-item:hover {
+    background-color: darkred; }
+
+.left__panel {
+  width: 80px;
+  height: calc(100% - 80px);
   background-color: darkred;
-  top: 30px;
-  left: -50px;
-  width: 50px;
-  height: 70%;
+  position: absolute;
+  top: 40px;
+  left: 0;
   display: flex;
   flex-direction: column;
-  justify-content: space-around; }
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: flex-start; }
 
-.paint_tools-item {
-  height: 100%;
-  cursor: pointer; }
+.left__panel-name {
+  margin-top: 20px;
+  color: red;
+  font-size: 30px; }
 
-.paint_tools-item:hover {
-  background-color: red; }
+.left__panel-item {
+  margin-top: 10px;
+  background-color: orange;
+  min-height: 50px;
+  width: 100%;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative; }
+  .left__panel-item:hover {
+    background-color: red; }
+    .left__panel-item:hover .left__panel__brush-panel {
+      display: flex; }
 
-#color_input {
+.left__panel__brush-panel {
+  padding: 5px;
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 100%;
+  width: 100px;
+  height: 100px;
+  background-color: red;
+  cursor: default;
+  flex-direction: column; }
+
+.brush-panel_item {
+  cursor: pointer;
+  height: 40px;
+  background-color: darkred;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 10px; }
+  .brush-panel_item:hover {
+    background-color: darkorange; }
+
+.left__panel-active {
+  background-color: yellow; }
+
+.bottom__panel {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 40px;
+  background-color: darkorange;
+  display: flex;
+  justify-content: space-between;
+  padding-left: 80px;
+  padding-right: 200px; }
+
+.bottom__panel-item {
+  background-color: darkorange;
+  border-left: 1px solid black;
+  border-right: 1px solid black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  max-width: 200px;
+  width: 100%; }
+  .bottom__panel-item:hover {
+    background-color: darkred; }
+
+.right__panel {
+  text-align: center;
+  position: absolute;
+  top: 40px;
+  right: 0px;
+  width: 200px;
+  height: calc(100% - 80px);
+  background-color: darkred;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start; }
+
+.right__title {
+  font-size: 40px;
+  margin-top: 20px;
+  margin-bottom: 20px; }
+
+.right__panel-item {
   height: 50px;
-  width: 50px; }
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: darkorange;
+  cursor: pointer; }
+  .right__panel-item:hover {
+    background-color: red; }
 
 .cursor {
   position: absolute;
@@ -147,3 +170,16 @@ h1 {
   z-index: 0;
   border: 1px solid black;
   pointer-events: none; }
+
+#bottom__panel-item-color {
+  height: 50%;
+  width: 50%; }
+
+.paint {
+  position: absolute;
+  top: 40px;
+  left: 80px; }
+
+@media (max-width: 1350px) {
+  .container {
+    padding: 0 20px 0 20px; } }
