--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -1,5 +1,5 @@
-// @media (max-width: 1350px) {
-//     .container {
-//         padding: 0 20px 0 20px;
-//     }
-// }
+@media (max-width: 1350px) {
+    .container {
+        padding: 0 20px 0 20px;
+    }
+}
