--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,30 +1,18 @@
 @import "global";
 @import "fonts";
-.header {
-    background-color: gray;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+* {
+    box-sizing: border-box;
 }
 
-h1 {
-    color: red;
-    text-align: center;
-}
+
+
 .paint {
     position: absolute;
+    border: 1px solid black;
+    overflow: auto;
+    background-color: gray;
+}
 
-}
-.paint_setting{
-    position: absolute;
-    left: 0;
-    top: -30px;
-    display: flex;
-    justify-content: space-around;
-    height: 30px;
-    width: 100%;
-}
 .color_panel {
     display: none;
     justify-content: space-around;
@@ -37,105 +25,155 @@ h1 {
     cursor: default;
 
 }
-.paint_item {
-    position: relative;
+
+.header__panel {
+    display: flex;
+    justify-content: space-between;
+    background-color: orange;
+    padding-left: 80px;
+    padding-right: 200px;
+    
+}
+.header__panel-item {
+    border-left:1px solid black; 
+    border-right: 1px solid black; 
+    max-width: 300px;
+    width: 100%;
+    height: 40px;
+    background-color: orange;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
     &:hover {
         background-color: darkred;
-        color: black;
-        .color_panel
-        {
-            display: flex;
-        }
-    }
-}
-.color {
-    width: 20px;
-    height: 20px;
-    margin-bottom: 5px;
-    cursor: pointer;
-    &:last-child {
-        margin: 0;
     }
 }
 
-.r1 {
-    background-color: rgb(121, 0, 0);
-}
-.r2 {
-    background-color: rgb(179, 0, 0);
-}
-.r3 {
-    background-color: rgb(212, 0, 0);
-}
-.r4 {
-    background-color: red;
-}
-.y1 {
-    background-color: rgb(119, 119, 0);
-}
-.y2 {
-    background-color: rgb(155, 155, 0);
-}
-.y3 {
-    background-color: rgb(223, 223, 0);
-}
-.y4 {
-    background-color: yellow;
-}
-.g1 {
-    background-color: rgb(30, 83, 30);
-}
-.g2 {
-    background-color: rgb(46, 107, 46);
-}
-.g3 {
-    background-color: rgb(86, 158, 86);
-}
-.g4 {
-    background-color: lightgreen;
-}
 
-.b1 {
-    background-color: rgb(0, 0, 121);
+.left__panel {
+    width: 80px;
+    height: calc(100% - 80px);
+    background-color:darkred;
+    position: absolute;
+    top: 40px;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: flex-start;
+
 }
-.b2 {
-    background-color: rgb(0, 0, 156);
+.left__panel-name {
+    margin-top: 20px;
+    color: red;
+    font-size: 30px;
 }
-.b3 {
-    background-color: rgb(0, 0, 192);
-}
-.b4 {
-    background-color: blue;
-}
-.paint_item {
-    cursor: pointer;
+.left__panel-item {
+    margin-top: 10px;
     background-color: orange;
+    min-height: 50px;
     width: 100%;
+    cursor: pointer;
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
+    &:hover {
+        background-color: red;
+        .left__panel__brush-panel {
+            display: flex;
+            
+        }
+    }
 }
-.paint_tools {
+.left__panel__brush-panel {
+    padding: 5px;
+    display: none;
     position: absolute;
+    top: 0;
+    left: 100%;
+    width: 100px;
+    height: 100px;
+    background-color: red;
+    cursor: default;
+    flex-direction: column;
+}
+.brush-panel_item {
+    cursor: pointer;
+    height: 40px;
     background-color: darkred;
-    top: 30px;
-    left: -50px;
-    width: 50px;
-    height: 70%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px;
+    &:hover {
+        background-color: darkorange;
+    }
+}
+.left__panel-active {
+    background-color: yellow;
+    
+}
+
+
+.bottom__panel {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 40px;
+    background-color: darkorange;
+    display: flex;
+    justify-content: space-between;
+    padding-left: 80px;
+    padding-right: 200px;
+}
+.bottom__panel-item {
+    background-color: darkorange;
+    border-left: 1px solid black;
+    border-right: 1px solid black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    max-width: 200px;
+    width: 100%;
+    &:hover {
+        background-color: darkred;
+    }
+}
+
+
+.right__panel {
+    text-align: center;
+    position: absolute;
+    top: 40px;
+    right: 0px;
+    width: 200px;
+    height: calc(100% - 80px);
+    background-color: darkred;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: flex-start;
+
 }
-.paint_tools-item {
-    height: 100%;
-    cursor: pointer;
+.right__title {
+    font-size: 40px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
-.paint_tools-item:hover {
-    background-color: red;
-}
-#color_input{
+.right__panel-item {
     height: 50px;
-    width: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: darkorange;
+
+    cursor: pointer;
+    &:hover {
+        background-color: red;
+    }
 }
 .cursor {
     position: absolute;
@@ -146,6 +184,17 @@ h1 {
     border: 1px solid black;
     pointer-events: none;
 }
-#example {
+
+
+
+#bottom__panel-item-color {
+    height: 50%;
+    width: 50%;
+}
+
+.paint {
+    position: absolute;
+    top: 40px;
+    left: 80px;
 }
 @import "media";
