--- a/app/css/style.css
+++ b/app/css/style.css
@@ -17,8 +17,12 @@ img {
 .paint {
   position: absolute;
   border: 1px solid black;
-  overflow: auto;
-  background-color: gray; }
+  overflow: hidden;
+  background-color: gray;
+  top: 40px;
+  left: 80px;
+  width: calc( 100% - 280px);
+  height: calc(100% - 80px); }
 
 .color_panel {
   display: none;
@@ -145,7 +149,8 @@ img {
   background-color: darkred;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start; }
+  justify-content: flex-start;
+  overflow: auto; }
 
 .right__title {
   font-size: 40px;
@@ -153,7 +158,7 @@ img {
   margin-bottom: 20px; }
 
 .right__panel-item {
-  height: 50px;
+  min-height: 50px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -175,10 +180,11 @@ img {
   height: 50%;
   width: 50%; }
 
-.paint {
+#canvas {
   position: absolute;
-  top: 40px;
-  left: 80px; }
+  left: 0;
+  top: 0;
+  border: 1px solid black; }
 
 @media (max-width: 1350px) {
   .container {
