--- a/app/css/style.css
+++ b/app/css/style.css
@@ -52,6 +52,7 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
   cursor: pointer; }
   .header__panel-item:hover {
     background-color: darkred; }
@@ -158,7 +159,7 @@ img {
   margin-bottom: 20px; }
 
 .right__panel-item {
-  min-height: 50px;
+  min-height: 80px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -175,6 +176,50 @@ img {
   z-index: 0;
   border: 1px solid black;
   pointer-events: none; }
+
+.modal__setting-canvas {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  align-items: center;
+  justify-content: center; }
+
+.modal__setting-canvas-center {
+  padding: 20px;
+  background-color: white;
+  height: 500px;
+  width: 400px;
+  display: flex;
+  align-items: center;
+  flex-direction: column; }
+  .modal__setting-canvas-center button {
+    margin-top: 30px; }
+
+.setting-canvas__size {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 100%; }
+  .setting-canvas__size label {
+    width: 100%;
+    display: flex;
+    justify-content: space-between; }
+
+.setting-canvas__position {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 100%; }
+  .setting-canvas__position label {
+    width: 100%;
+    display: flex;
+    justify-content: space-between; }
+
+.active {
+  display: flex !important; }
 
 #bottom__panel-item-color {
   height: 50%;
