--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -94,13 +94,12 @@
     }
 }
 .left__panel__brush-panel {
-    padding: 5px;
     display: none;
     position: absolute;
     top: 0;
     left: 100%;
-    width: 100px;
-    height: 100px;
+    width: 80px;
+    height: 80px;
     background-color: red;
     cursor: default;
     flex-direction: column;
@@ -112,9 +111,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 10px;
     &:hover {
         background-color: darkorange;
+        svg{
+            fill: black;
+        }
     }
 }
 .left__panel-active {
@@ -175,11 +176,15 @@
     align-items: center;
     justify-content: center;
     background-color: darkorange;
-
     cursor: pointer;
     &:hover {
         background-color: red;
     }
+}
+
+.left__panel-icon {
+    width: 30px;
+    height: 30px;
 }
 .cursor {
     position: absolute;
