--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -4,8 +4,6 @@
     box-sizing: border-box;
 }
 
-
-
 .paint {
     position: absolute;
     border: 1px solid black;
@@ -27,7 +25,6 @@
     background-color: lightgray;
     padding: 20px;
     cursor: default;
-
 }
 
 .header__panel {
@@ -119,10 +116,9 @@
     }
 }
 .left__panel-active {
-    background-color: yellow;
+    background-color: yellow!important;
     
 }
-
 
 .bottom__panel {
     position: absolute;
@@ -162,7 +158,9 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+
     overflow: auto;
+
 
 }
 .right__title {
@@ -176,10 +174,33 @@
     align-items: center;
     justify-content: center;
     background-color: darkorange;
+    position: relative;
     cursor: pointer;
     &:hover {
         background-color: red;
     }
+}
+
+.right__panel-img {
+    height: 50px;
+}
+.right__panel-img:hover {
+    border: 1px solid black;
+}
+.right__item-close {
+    width: 50px;
+    height: 50px;
+    background-color: black;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+.history_btn {
+    height: 50px;
+    width: 45%;
+}
+.right__panel-buttons {
+    background-color: red;
 }
 
 .left__panel-icon {
